# backend

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: azure_nordicmicroalgae-next.yml  build.yml  deploy.yml  main.yml
contributors/: urls.py  views.py
contributors/management/commands/: exportusers.py  importusers.py
core/: utils.py
core/views/: generics.py
facts/: apps.py  models.py  urls.py  views.py
facts/management/commands/: importbiovolumes.py  importfacts.py  importlinks.py
facts/migrations/: 0001_initial.py
media/: __init__.py  admin.py  apps.py  forms.py  models.py  renditions.py  storage.py  storages.py  tests.py  urls.py  views.py  widgets.py
media/config/: fields.yaml
media/management/commands/: createrenditions.py  exportmedia.py  importmedia.py
media/migrations/: 0001_initial.py  0002_alter_media_options.py  0003_imagelabelingimage.py  0004_convert_institute_to_array.py
media/static/admin/css/: media_form.css  media_preview.css  media_priority.css
media/static/admin/js/: MediaFormEnhancements.js  MediaSortableChangeList.js  mediatag.js
media/templates/admin/media/: change_list.html  change_taxon_intermediate.html  imagelabeling_bulk_upload.html
media/templates/imagelabelingimage/: change_list.html
nordicmicroalgae/: admin.py  apps.py  asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
nordicmicroalgae/static/admin/css/: extended.css
nordicmicroalgae/templates/admin/: base.html  index.html  login.html
openapi/: apps.py  openapi.yaml  urls.py  views.py
pages/: readers.py  urls.py  views.py
synchronization/: apps.py  views.py
synchronization/management/commands/: syncdb.py
synchronization/static/admin/css/: syncdb.css
synchronization/templates/admin/: syncdb.html
taxa/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
taxa/config/: filters.yaml
taxa/management/commands/: exportdescriptions.py  importdescriptions.py  importsynonyms.py  importtaxa.py
taxa/migrations/: 0001_initial.py  0002_synonym.py  0003_imagelabelingtaxondescription_alter_taxon_options_and_more.py  0004_orphaneddescription.py
(+2 files in other folders)
