[project]
name = "nordicmicroalgae-backend"
version = "2.2.2"
description = "Nordic Microalgae"
authors = [
]
dependencies = [
    "django==5.2.11",
    "django-axes>=7.0.1",
    "pillow==12.1.1",
    "pyyaml==6.0.3",
    "psycopg==3.3.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
]

[tool.ruff]
line-length = 90
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
per-file-ignores."**/migrations/*.py" = ["RUF012"]  # mutable-class-default, not compatible with Django migrations

ignore = [
    "DJ001",  # django-nullable-model-string-field, should be fixed but needs migration
]

select = [
    "A",  # flake8-builtins
    "DJ",  # flake8-django
    "E",  # pycodestyle: error
    "F",  # pyflakes
    "W",  # pycodestyle: warning
    "I",  # isort
    "RUF"  # Ruff-specific rules
]
